apps/django-test-v3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-test-v3
  labels:
    name: django-test-v3
    managed-by: dev-portal
