apps/django-test-v3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-test-v3-service
  namespace: django-test-v3
  labels:
    app: django-test-v3
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-test-v3
